--- a/components/transaction-reports.html
+++ b/components/transaction-reports.html
@@ -4,7 +4,8 @@
   <table class = "highlight centered" id="table-reports-list" style = "margin-top:50px;">
     <thead>
       <tr>
-                
+        
+        <th>NAME</th>
         <th>TYPE</th>
         <th>TRANSACTION FEE</th>
                 
