Super Super Tidert

--- a/components/banned-remnant-request.html
+++ b/components/banned-remnant-request.html
@@ -9,7 +9,7 @@
                 <th>ACTION</th>
             </tr>
         </thead>
-        <tbody id="tbody-users">
+        <tbody id="tbody-remnants">
         </tbody>
     </table>
 </div>
