--- a/components/reported-remnants-list.html
+++ b/components/reported-remnants-list.html
@@ -9,7 +9,7 @@
                     <th>No. of Reports</th>
                 </tr>
             </thead>
-            <tbody id="tbody-users">
+            <tbody id="tbody-reports-remnants">
             </tbody>
         </table>
     </div>
